<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".principal.PrincipalActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="333dp"
        android:layout_height="315dp"
        android:layout_marginTop="88dp"
        app:layout_constraintDimensionRatio="h,2:3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/logo_nombre" />

    <Button
        android:id="@+id/btn_inicio_sesion"
        android:layout_width="311dp"
        android:layout_height="62dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/principalA"
        android:text="@string/incio_sesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <Button
        android:id="@+id/btn_registro_cuenta"
        android:layout_width="317dp"
        android:layout_height="59dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/grisClaro"
        android:textColorHint="@color/principalA"
        android:text="@string/registro_cuenta"
        android:textColor="@color/principalA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_inicio_sesion" />

    <Button
        android:id="@+id/btn_registro_cuenta_auxiliar"
        android:layout_width="317dp"
        android:layout_height="59dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/secundarioA"
        android:textColorHint="@color/principalA"
        android:text="@string/registro_cuenta_auxiliar"
        android:textColor="@color/principalA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_registro_cuenta" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/empresa"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
